[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archive-of-argentum"
version = "1.1.0"
description = "FastAPI utilities for Commander deckbuilding and validation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Archive of Argentum" }]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "mightstone==0.12.0",
    "pydantic==2.7.3",
    "pydantic-settings>=2.2.1,<3.0.0",
    "httpx==0.25.2",
    "motor==3.7.1",
    "aiohttp==3.9.1",
    "aiolimiter==1.1.0",
    "cachetools==5.3.2",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "structlog==23.2.0",
    "starlette==0.27.0",
    "mtg_parser==0.0.1a50",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.21.1",
]
